fix - x scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 ::-webkit-scrollbar {
     width: 10px;
-    height: 10px;
+    height: 0px;
     background-color: #282828;
   }
 
